ChangeLog for the Astro project.

20180503:
	* add retries to USB descriptor string retrieval to work around
	  problem with at90usb162 issue

20150718:
	* convert astro::camera::Exposure class to the more common conventions
	  in this project, in particular, make all members private
	* convert accessors in Binning class to our conventions

20150717:
	* Move DeviceNicer and Denicer to astro::device::nice and to the
	  main library, so that we can use network names in the main library
	* improve DeviceName class so that it understands local and network
	  device names, and can convert between them
	* add missing Mount type to the DeviceAccessor class
	* add Test for Nicer/Denicer classes

20150713:
	* fix threading issues in Avahi implementation
	* make service discover work in Linux
	* extend ServerName class to include name resolution via DNS Service
	  discovery

20150711:
	* add persistence to instruments

20150710:
	* add zeroconf stuff
	* add instruments interface

20150607:
	* add "othello" driver module for the guiderport device

20140716:
	* add serial communication class
	* add celestron driver
	* enforce device type matching name in all device constructors

20140715:
	* add Mount class

20140710:
	* add backlash compensation to FocusWork
	* add backlash to simulator (how can we get backlash information into
	  other camera/focuser combinations?)

20140703:
	* add type conversion adapter
	* add constant value adapter
	* fix MicroTouch implementation
	* Add FocusInfo and extended focus measure filters
	* move combination code to FocusWork
	* test FWHM code on real stars, seems to work, but guidance is important

20140702:
	* combine image, mask and circle to a single color image
	* fix an off by one error

20140701:
	* add SquareAdapter
	* add various focus measure adapters for autofocus
	* refactor FocusWork class
	* fix a bug in the moveto method of the Focuser base class
	* make focus method selectable in focusing tool
	* add focus filter functions
